# Gali

./: .env.example  .gitignore  README.md  TECHNICAL.md  openapi.yml  pyproject.toml  questions.md  requirements.txt  verify_rag.py
data/raw/: induced_protocol.txt  missed_protocol.txt
gali/: main.py
gali/config/: prompt_templates.py  requirements.txt  settings.py
gali/data/lancedb/gali_docs.lance/_transactions/: 0-2ee320b2-ce57-4658-9425-6d3ee4adc295.txn  0-471f59ab-baa0-47f8-b865-87889c543b08.txn  0-8513ea73-a18f-439e-8cc8-ad4617b0dfaa.txn  0-a0c47a06-6efc-45b8-8c76-a7251a618790.txn  1-394bf9d3-dcb1-4c72-8aee-819d08dd5fb1.txn  1-67a07bd2-0431-4259-a927-bc2e8e1c57dd.txn  1-9c1e2182-9892-4971-be46-0fb033cf87b1.txn  1-c9c6b163-998a-4c4e-84ae-c6925f71b46d.txn  2-65de58f0-e1d8-4819-bd86-ffa230cd38ef.txn  2-8b717476-8ecc-4d9d-81c6-331935b8d4cd.txn
gali/data/processed/: ingestion_hashes.json
gali/scripts/: setup_db.py
gali/src/core/: ingestor.py  rag_engine.py
gali/src/database/: vector_store.py
gali/src/utils/: logger.py  text_utils.py
gali/tests/: test_ingestion.py  test_retrieval.py
scripts/: setup_db.py
src/: main.py
src/api/: routes.py
src/core/: rag_engine.py
src/database/: vector_store.py
