[project]
name = "gali"
version = "0.1.0"
description = "Gali — Hebrew-aware medical RAG engine backed by Gemini, LanceDB, and MongoDB."
readme = "TECHNICAL.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gali Team" }]

dependencies = [
    "pypdf>=4.0.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-experimental>=0.0.50",
    "lancedb>=0.4.0",
    "motor>=3.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
ui = [
    "streamlit>=1.30.0",
]

[project.scripts]
gali-setup = "gali.scripts.setup_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
